# study_ws

./: .dockerignore  .gitignore  Dockerfile  README.md  ros2install.sh
course2_ws/src/bringup/: CMakeLists.txt  package.xml
course2_ws/src/bringup/config/: gazebo_bridge.yaml
course2_ws/src/bringup/launch/: sim_launch.xml
course2_ws/src/bringup/worlds/: maze.sdf
course2_ws/src/my_robot_description/: package.xml
course2_ws/src/my_robot_description/launch/: display.launch.py  display.launch.xml
course2_ws/src/my_robot_description/sdf/: robot.sdf
course2_ws/src/my_robot_description/urdf/: common_properties.xacro  robot_properties.xacro  robot_representation.xacro  udemy_robot_gazebo.xacro  udemy_robot_urdf.xacro
course2_ws/src/udemy_robot_description/: CMakeLists.txt  package.xml
course2_ws/src/udemy_robot_description/launch/: display.launch.py  display.launch.xml
course2_ws/src/udemy_robot_description/rviz/: udemy_robot.rviz
course2_ws/src/udemy_robot_description/urdf/: common_properties.xacro  robot_properties.xacro  robot_representation.xacro  udemy_robot_gazebo.xacro  udemy_robot_urdf.xacro
course2_ws/urdf_tutorial/: robot_frames.gv  robott.urdf  udemy_robot.urdf
study_ws/: .Dockerfile.swp  .dockerignore  Dockerfile  todo.txt
study_ws/install/: local_setup.sh  setup.sh
study_ws/install/cpp_pkg/lib/cpp_pkg/: HardwareStatusPublisher  NumberCounter  NumberPublisher  client_sumServer  client_sumServer_noop  cpp_node  news_station  radio  sumServer
study_ws/install/cpp_pkg/share/cpp_pkg/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
study_ws/install/py_pkg/lib/py_pkg/: HardwareStatusPublisher  radio  (+3 more)
study_ws/log/: latest_build
study_ws/src/bringup/: CMakeLists.txt  package.xml
study_ws/src/bringup/launch/: act06.launch.py  bringup.launch.py  bringup_turtle_hunter.py  launch.py  turtle_hunter.launch.py
study_ws/src/cpp_pkg/: CMakeLists.txt  package.xml
study_ws/src/cpp_pkg/src/: NumberCounter.cpp  NumberPublisher.cpp  activity004_client.cpp  activity004_server.cpp  activity_005.cpp  client_RectangleParam.cpp  client_sumServer.cpp  client_sumServer_noop.cpp  findRectangleArea_server.cpp  first_node.cpp  hw_statusPublisher.cpp  news_station.cpp  radio.cpp  sumServer.cpp
study_ws/src/irobot_interfaces/: CMakeLists.txt  package.xml
study_ws/src/irobot_interfaces/msg/: LEDStates.msg
study_ws/src/irobot_interfaces/srv/: KillSwitch.srv  SetLed.srv
study_ws/src/py_pkg/: package.xml  setup.py
study_ws/src/py_pkg/py_pkg/: RectangleArea_server.py  activity004_client.py  activity004_server.py  activity005.py  client_RectangleArea.py  client_sumServer.py  first_node.py  news_station.py  numberCounter.py  numberPublisher.py  radio.py
study_ws/src/turtle_hunter/: package.xml  setup.py
study_ws/src/turtle_hunter/cmake/: turtle_hunterConfig.cmake
study_ws/src/turtle_hunter/turtle_hunter/: deity.py  hunter.py  spawner.py
study_ws/src/turtle_hunter_cpp/: CMakeLists.txt  package.xml
study_ws/src/turtle_hunter_cpp/src/: deity_.cpp  hunter_.cpp
test_ws/: .notes.txt.save.swp  Dockerfile  notes.txt  notes.txt.save
test_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
test_ws/log/: latest_build
test_ws/src/modbus_client_cpp/: CMakeLists.txt  package.xml
test_ws/src/modbus_client_cpp/src/: modbus_tcp_client.cpp
test_ws/src/modbus_client_py/: package.xml  setup.cfg  setup.py
test_ws/src/serial_com/: CMakeLists.txt  package.xml
test_ws/src/serial_com/src/: rs485.cpp
test_ws/src/tcp_client_cpp/: CMakeLists.txt  package.xml
test_ws/src/tcp_client_py/: package.xml  setup.cfg  setup.py
test_ws/src/tcp_server/: CMakeLists.txt  package.xml
test_ws/src/tcp_server/src/: tcp_server.cpp
urdf_tutorial/: my_robot.urdf  robott.urdf
(+61 files in other folders)
